@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2216 2004/02/03 19:02:11 druzus Exp $
+ * $Id: ChangeLog,v 1.2217 2004/02/03 20:05:21 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-02-03 14:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbgtwvt.h
+    * Rearranged headers inclusion.
+
+  * source/rtl/gtwvt/gtwvt.c
+    * Corrected few NULL to 0 and removed unused variable.
+
 2004-02-04 03:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/vm/debug.c
     + add wrappers for :
